# smart_answering_system_using_rag-

./: .env  .env.example  .gitignore  README.md  TODO.md  TODO_cloud_local.md  TODO_image_gen.md  app.py  app_fixed.py  app_fixed_complete.py  app_fixed_startup.py  app_ollama.py  check_local_db.py  config.py  db_report_raw.txt  diagnose_db.py  flask_app.py  ingestion_status.py  inspect_db.py  inspect_results.txt  inspect_vectors.py  main.py  multimodal_assistant.py  multimodal_rag_architecture.mmd  pyproject.toml  render.yaml  requirements.txt  review_0.final.pptx  run_server.bat  session_store.py  smart_rag_er_diagram.mmd  test_auth.py  test_ingestion.py  test_isolated.py  test_jwt.py  test_llm.py  test_mysql.py  test_postgres.py  test_rag_query.py  test_router.py  (+3 more)
agent/: planner.py
data/: GANESH63.doc.docx  GANESH63.doc_1.docx  RESEARCH_PAPER_10s1.docx  VIVEK_openlab11.docx  chat_history.json  fresher_resume_template.docx  gokulganesh_mini_project_paper.docx  gokulganesh_mini_project_paper_2.docx
database/: chroma_client.py  db_config.py  setup_database.sql
ingestion/: ingest_docx.py  ingest_image.py  ingest_pdf.py
models/: embedding_model.py
project_ui/: chat_fixed.js  dashboard.html  index.html  login.html  modern_chat.html  multimodal.css  multimodal.html  multimodal.js  script.js  style.css
retrieval/: reranker.py  search.py
scratch/: all_ids.txt  debug_img_gen.py  debug_output.txt  list_all_models.py  list_models.py  models_list.txt  test_openrouter.py  test_payload.json
utils/: __init__.py  ai_router.py  ai_router.py.bak  ai_router.py.bak4  auth.py  (+10 more)
(+4 files in other folders)
