[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal_rag"
version = "0.1.0"
dependencies = [
  "chromadb",
  "sentence-transformers",
  "transformers",
  "torch",
  "pillow",
  "pymupdf",
  "python-docx",
  "openai",
  "numpy",
  "accelerate",
  "python-multipart",
  "fastapi",
  "uvicorn[standard]",
]

[tool.hatch.build.targets.wheel]
