[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal_rag"
version = "0.1.0"
dependencies = [
  "chromadb==0.5.5",
  "sentence-transformers",
  "transformers",
  "torch",
  "pillow",
  "pymupdf",
  "python-docx",
  "openai",
  "numpy",
  "accelerate",
  "python-multipart",
  "fastapi",
  "uvicorn[standard]",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "database", "ingestion", "models", "retrieval"]
